Update citeproc-java to version 2.0.0 (#5585)